--- a/spec/definitions/SourceUri.yaml
+++ b/spec/definitions/SourceUri.yaml
@@ -1,7 +1,7 @@
 type: object
 required:
-  - shortUrl
+  - sourceUri
 properties:
-  shortUrl:
+  sourceUri:
     type: string
-    format: url
+    format: uri
