MSPF-321: Introduce fixes according to PR comments #2

--- a/spec/paths/short-urls.yaml
+++ b/spec/paths/short-urls.yaml
@@ -22,6 +22,6 @@ post:
     '201':
       description: Короткая ссылка создана
       schema:
-        $ref: '#/definitions/RelativeShortUrl'
+        $ref: '#/definitions/ShortUrl'
     '400':
       $ref: '#/responses/BadRequest'
