--- a/spec/definitions/ShortUrl.yaml
+++ b/spec/definitions/ShortUrl.yaml
@@ -6,7 +6,7 @@ properties:
   id:
     type: string
     readOnly: true
-  relativeShortUrl:
+  shortUrl:
     type: string
     format: uri
     readOnly: true
